--- a/Robocode/meta.tex
+++ b/Robocode/meta.tex
@@ -71,4 +71,9 @@
 
 
 \newenvironment{code}{\captionsetup{type=listing}}{}
-\SetupFloatingEnvironment{listing}{name=Source Code}
+\SetupFloatingEnvironment{listing}{name=Code}
+
+\usemintedstyle{friendly}
+
+\usepackage{xcolor}
+\definecolor{mygray}{gray}{0.9}
