--- a/SecoesComuns/Apresentacao/apresentacao.tex
+++ b/SecoesComuns/Apresentacao/apresentacao.tex
@@ -30,8 +30,8 @@
 			  \item Um ano de estágio em docência na USP
 			  \item Publicações Científicas
 			  \item Orientação de iniciação científica
-			  \item Disciplina: "Técnicas de programação em Games" (SENAC)
-			  \item Disciplina: "TCC 2"	(SENAC)
+			  \item Disciplina: \textbf{Técnicas de programação em Games} (SENAC)
+			  \item Disciplina: \textbf{TCC 2} (SENAC)
 		  \end{itemize}
 	\end{block}
 \end{frame}
