--- a/Robocode/robocode.tex
+++ b/Robocode/robocode.tex
@@ -2,7 +2,7 @@
 
 \include{meta}
 
-\title[Aula Teste]{Robocode}
+\title[Aula Teste]{Aula Teste \\ Robocode}
 \author{Professor Mestre: Adilson Lopes Khouri}
 
 \begin{document}
@@ -10,10 +10,10 @@
 	\begin{frame}
 		\titlepage
 	\end{frame}
-	
-	\input{../SecoesComuns/Apresentacao/apresentacao}
-	
+
 	\input{../SecoesComuns/Sumario/sumario}
+		
+	\input{../SecoesComuns/Apresentacao/apresentacao}
 	
 	\input{./secoes/intro/intro}	
 
