adicionado o arquivo jar do instalador

--- a/Robocode/secoes/intro/intro.tex
+++ b/Robocode/secoes/intro/intro.tex
@@ -14,7 +14,7 @@
 \end{frame}
 
 
-\section{História}
+\section{História do Robocode}
 
 \begin{frame}
 	\begin{block}{História}
@@ -58,7 +58,7 @@
 
 
 
-\section{Instalação}
+\section{Instalação do Robocode}
 
 \begin{frame}
 	\begin{block}{Instalação}
