--- a/SecoesComuns/Apresentacao/apresentacao.tex
+++ b/SecoesComuns/Apresentacao/apresentacao.tex
@@ -27,7 +27,7 @@
 \begin{frame}	
 	\begin{block}{Experiência Acadêmica}
 		 \begin{itemize}
-			  \item Um ano de estágio em docência na USP
+			  \item Quatro estágios em docência na USP (duração de dois anos) 
 			  \item Publicações Científicas
 			  \item Orientação de iniciação científica
 			  \item Disciplina: \textbf{Técnicas de programação em Games} (SENAC)
