--- a/Robocode/secoes/intro/intro.tex
+++ b/Robocode/secoes/intro/intro.tex
@@ -219,7 +219,6 @@
 \end{frame}
 
 
-%// API help : https://robocode.sourceforge.io/docs/robocode/robocode/Robot.html
 \section*{Código do robô}
 
 \begin{frame}[fragile]
@@ -339,3 +338,19 @@
 		\end{itemize}
 	\end{block}
 \end{frame}
+
+
+\begin{frame}
+	\begin{block}{Fontes de consulta robocode}
+		\begin{itemize}
+			\item \href{https://robocode.sourceforge.io/docs/ReadMe.html}{\color{blue}{README}} do Robocode
+			\item \href{https://robocode.sourceforge.io/}{\color{blue}{Source Forge}} do projeto
+			\item \href{http://robowiki.net/wiki/Main_Page}{\color{blue}{RoboWiki}} com tutoriais
+			\item \href{https://robocode.sourceforge.io/docs/robocode/robocode/Robot.html}{\color{blue}{API}} do Robocode
+			\item \href{https://medium.com/metrosystemsro/the-ultimate-international-robocode-tournament-225c54625219}{\color{blue}{Competição de Robocode}}
+			\item \href{https://www.amazon.com/Plataforma-Robocode-Ferramenta-Ensino-Programa\%C3\%A7\%C3\%A3o/dp/3330756101/ref=sr_1_3?keywords=robocode+book&qid=1551357320&s=gateway&sr=8-3-spell}{\color{blue}{Livro}} sobre Robocode
+		\end{itemize}
+	\end{block}
+\end{frame}
+
+
