--- a/Robocode/secoes/intro/intro.tex
+++ b/Robocode/secoes/intro/intro.tex
@@ -126,7 +126,7 @@
 			
 			\item \emph{Gun}: Montada no \emph{Body} é responsável por atirar bolas de energia. A arma pode ser rotacionada para: i) direta; ou ii) esquerda
 
-			\item \emph{Radar}: usado para escanear outros robôs durante o movimento do robô, pode ser movimentado para: i) direta; ou ii) esquerda. Esse radar lança o evento:  \emph{onScannedRobot()}  \citep{ROBOWIKI}
+			\item \emph{Radar}: usado para escanear outros robôs durante o movimento do robô, pode ser movimentado para: i) direta; ou ii) esquerda. Esse radar dispara o evento:  \emph{onScannedRobot()}  \citep{ROBOWIKI}
 						
 		\end{itemize}
 	\end{block}
