--- a/IoT/Aulas_Fonte_Professor/Aula02/Aula02_IoT.tex
+++ b/IoT/Aulas_Fonte_Professor/Aula02/Aula02_IoT.tex
@@ -13,13 +13,10 @@
 	
 	\input{../../../SecoesComuns/Sumario/sumario}
 	
-	%\input{../../../SecoesComuns/Apresentacao/apresentacao}
-	
 	\input{./secoes/Cronograma/cronograma}
 	
-%	\input{./secoes/OqueEhIoT/OqueEhIoT}
-%	\input{./secoes/CaracteristicasIoT/CaracteristicasIoT}
-				
+	\input{./secoes/MetodoCientifico/MetodoCientifico}
+					
 	\input{../../../SecoesComuns/Duvidas/duvidas}
 
 	\input{../../../SecoesComuns/Contato/contato}
