--- a/IoT/Aulas_Fonte_Professor/Aula02/secoes/MetodoCientifico/MetodoCientifico.tex
+++ b/IoT/Aulas_Fonte_Professor/Aula02/secoes/MetodoCientifico/MetodoCientifico.tex
@@ -306,6 +306,15 @@
 		\item Análise: Estudos dos dados, entendimento de padrões, gráficos e relações.
 		\item Aqui avaliamos valores de variáveis e suas distribuições, variáveis tomadas par a par, padrões sobre o tempo
 		\item Validamos hipóteses definidas anteriormente, criamos modelos para predizer valores.
+		
+		\end{itemize}
+	\end{block}
+\end{frame}
+    
+
+\begin{frame}
+	\begin{block}{Processo Adaptado}
+		\begin{itemize}
 		\item Atividades típicas nesse estágio
 				\begin{itemize}
 					\item Se há dados temporais identificar sazonalidade e padrões no decorrer do tempo
@@ -316,8 +325,8 @@
 					\item Classificação de texto usando processamento de linguagem natural
 					\item  Usar técnicas de machine learning (SVM, Redes Neurais, Xgboost, árvores, Random Forest)
 					\item Técnicas de redução de dimensionalidade
-				\end{itemize}		
-		\end{itemize}
+				\end{itemize}
+		\end{itemize}				
 	\end{block}
 \end{frame}
     
