--- a/IoT/Aulas_Fonte_Professor/Aula03/Aula03_IoT.tex
+++ b/IoT/Aulas_Fonte_Professor/Aula03/Aula03_IoT.tex
@@ -13,13 +13,9 @@
 	
 	\input{../../../SecoesComuns/Sumario/sumario}
 	
-	%\input{../../../SecoesComuns/Apresentacao/apresentacao}
-	
 	\input{./secoes/Cronograma/cronograma}
 	
-%	\input{./secoes/OqueEhIoT/OqueEhIoT}
-%
-%	\input{./secoes/CaracteristicasIoT/CaracteristicasIoT}
+	\input{./secoes/EDA/EDA}	
 				
 	\input{../../../SecoesComuns/Duvidas/duvidas}
 
