adcionado fonte/slide da aula 4 - finalizei os modelos

--- a/IoT/Aulas_Fonte_Professor/Aula03/jupyternotebook/data-preparation-exploration.ipynb
+++ b/IoT/Aulas_Fonte_Professor/Aula03/jupyternotebook/data-preparation-exploration.ipynb
@@ -3887,6 +3887,219 @@
     "## Conclusion\n",
     "Hopefully this notebook helped you with some tips on how to start with this competition. Feel free to vote for it. And if you have questions, post a comment."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# O que é boost?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É uma estratégia baseada em árvore, ondee elas são construídas de forma sequencial. A árvore seguinte tem por objetivo ser um *boost* (versão melhorada) da árvore anterior. Cada árvore aprende com os erros e scores da anterior, vamos usar um exemplo simples aqui:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos tentar prerdizer salário usando sexo, tipo de trabalho e posição hierárquica, seguem dados:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](pic/data.png \"Data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hipóteses:\n",
+    "\n",
+    "1. Maior a posição maior o salário\n",
+    "2. Homens ganham mais (sexismo)\n",
+    "3. O tipo de trabalho é apenas ruído (indiferente)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-10T04:19:24.407397Z",
+     "start_time": "2019-11-10T04:19:24.222316Z"
+    }
+   },
+   "source": [
+    "![alt text](pic/summary.png \"Summario\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora treinamos nossa árvore de regressão:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](pic/tree1.png \"Summario\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos expandir a árvore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](pic/tree2.png \"Summario\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mesmo que trocarmos os parâmetros desse modelo, teremos um overfitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](pic/errror1.png \"Summario\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora treinamos um modelo com os dados e o residual (erro) do modelo anterior"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](pic/tree3.png \"Summario\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A árvore acima considera todo o espaço de features e não apenas um subconjunto "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-10T04:29:52.901432Z",
+     "start_time": "2019-11-10T04:29:52.759745Z"
+    }
+   },
+   "source": [
+    "![alt text](pic/error4.png \"Summario\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient boosting é um framework que vc pluga um modelo e calcula outro modelo em cima do residual do modelo original\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Xgboost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trocamos a função de perda de MSE (Mean Squared Error) para MAE (Mean Absolute Error), ao invés de fitar a segunda função sobre a perda vamos fitar ela sobre o gradiente da função de perda em relação aos valores prreditos produzidos pelo primeiro modelo inicial (F0 que ée apenas a mediana dos valores). Uma unidade alterada em $Y$ altera uma unidade MAE. Vamos treinar h0 sobre [descrição xgboost](https://medium.com/@pushkarmandot/how-exactly-xgboost-works-a320d9b8aeef)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
