--- a/IoT/Aulas_Fonte_Professor/Aula04/Aula04_IoT.tex
+++ b/IoT/Aulas_Fonte_Professor/Aula04/Aula04_IoT.tex
@@ -13,14 +13,10 @@
 	
 	\input{../../../SecoesComuns/Sumario/sumario}
 	
-	%\input{../../../SecoesComuns/Apresentacao/apresentacao}
-	
 	\input{./secoes/Cronograma/cronograma}
 	
-%	\input{./secoes/OqueEhIoT/OqueEhIoT}
-%
-%	\input{./secoes/CaracteristicasIoT/CaracteristicasIoT}
-				
+	\input{./secoes/Modelagem/Modelagem}
+					
 	\input{../../../SecoesComuns/Duvidas/duvidas}
 
 	\input{../../../SecoesComuns/Contato/contato}
